# gxde-sendbylan

./: .gitignore  CMakeLists.txt  README.md  config.h  filesend.pro  gxde-sendbylan.desktop  icon.qrc  main.cpp  main.py  main.py.bak  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  widget.cpp  widget.h  widget.ui
.pages/: index.html
.pages/css/: app.9fc1142b.css
.pages/js/: about0.6ab870c8.js  about2.5d4aceef.js  about4.99b05804.js  app.6aab0c39.js  chunk-vendors.23845a61.js
build-SBL-Setting-unknown-Debug/: Makefile  SBL-Setting  moc_widget.cpp  qrc_icons.cpp  ui_widget.h
build-SBL-Setting-unknown-Release/: Makefile  SBL-Setting  moc_mainwindow.cpp  ui_widget.h
debian/: changelog  control  rules
error/: 403.html  404.html
setting/: SBL-Setting.pro  icons.qrc  main.cpp  mainwindow.cpp  widget.cpp  widget.h  widget.ui
tests/: test_upload.py
